Fix button position on mobile

--- a/monitoring-app/src/app/components/DevicePageContent.module.css
+++ b/monitoring-app/src/app/components/DevicePageContent.module.css
@@ -16,7 +16,7 @@
 }
 .sensorInfoDialogBtn {
   position: absolute;
-  right: -0.5rem;
+  right: 0;
   top: -0.5rem;
   text-transform: lowercase;
   box-shadow: 0 0.25rem 0.25rem 0 rgba(0, 0, 0, 0.15);
@@ -31,5 +31,8 @@
 @media screen and (min-width: 37.5rem) {
   .container {
     padding: 2rem 0;
+  }
+  .sensorInfoDialogBtn {
+    right: -0.5rem;
   }
 }
